# regular_encoding

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  get_code_cov.sh
include/: alphabetic_encoder.h  bijective_checker.h  code_generator.h  code_tree.h  code_tree_node.h  contexts_factory.h  main.h  simple_suffix_tree.h  state_machine.h  structures.h  suffix_tree.h  unbijective_code_generator.h
src/: alphabetic_encoder.cc  bijective_checker.cc  code_generator.cc  code_tree.cc  code_tree_node.cc  contexts_factory.cc  main.cc  simple_suffix_tree.cc  state_machine.cc  structures.cc  suffix_tree.cc  unbijective_code_generator.cc
test/: CMakeLists.txt  bijective_checker_test.cc  code_generator_test.cc  macros.h  main.cc  test_bijective_checker.cc  test_code_generator.cc
test/test_bijective_checker/: CMakeLists.txt  test_bijective_checker.cc
test/test_code_generator/: CMakeLists.txt  test_code_generator.cc
test/test_hello/: CMakeLists.txt  test_hello.cc
tools/: CMakeLists.txt  check_bijectivity.cc  run_bijective_checker.cc
